==> cryviem/choen/stm32OS/ee_files/contrib/as/arch/stellaris/keil/drivers/Mcu.c <==
#define	MCU_AR_RELEASE_MAJOR_VERSION	4
#define	MCU_AR_RELEASE_MINOR_VERSION	0
#include "Mcu.h"
#include "ee.h"
#include "Det.h"
#include "Dem.h"
#define VALIDATE(_exp,_api,_err) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    return; \
  }
#define VALIDATE_IRQ(_exp,_api,_err,_flags) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    EE_hal_resumeIRQ(_flags); \
    return; \
  }
#define VALIDATE_W_RV(_exp,_api,_err,_rv) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    return (_rv); \
  }
#define VALIDATE_IRQ_W_RV(_exp,_api,_err,_rv,_flags) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    EE_hal_resumeIRQ(_flags); \
    return (_rv); \
  }
#define VALIDATE(_exp,_api,_err) \
  if( !(_exp) ) { \
    return; \
  }
#define VALIDATE_IRQ(_exp,_api,_err,_flags) \
  if( !(_exp) ) { \
    EE_hal_resumeIRQ(_flags); \
    return; \
  }
#define VALIDATE_W_RV(_exp,_api,_err,_rv) \
  if( !(_exp) ) { \
    return (_rv); \
  }
#define VALIDATE_IRQ_W_RV(_exp,_api,_err,_rv,_flags) \
  if( !(_exp) ) { \
    EE_hal_resumeIRQ(_flags); \
    return (_rv); \
  }
#include "Hardware.h"	/* Hardware Abstraction Header File. */

static Std_ReturnType Mcu_InitSystemClock(
  const Mcu_ClockSettingConfigType *ConfigPtr
)
{
  register Std_ReturnType	ret = E_OK;
#ifdef	__AS_MCU_INTERNAL_OSCILLATOR_CALIBRATION__
  register uint32		attempt;
#endif	/* __AS_MCU_INTERNAL_OSCILLATOR_CALIBRATION__ */

  register uint32 rccsrc;	/* Run-Mode Clock Configuration Source        */
  register uint32 rcc2src;	/* Run-Mode Clock Configuration 2 Source      */
  register uint32 rccdst;	/* Run-Mode Clock Configuration Destination   */
  register uint32 rcc2dst;	/* Run-Mode Clock Configuration 2 Destination */

#ifdef	__AS_MCU_INTERNAL_OSCILLATOR_CALIBRATION__
  register uint32 rccorig;	/* Run-Mode Clock Configuration Original      */
  register uint32 rcc2orig;	/* Run-Mode Clock Configuration 2 Original    */

  rccorig = SYSCTL_RCC_R;
  rcc2orig = SYSCTL_RCC2_R;
#endif	/* __AS_MCU_INTERNAL_OSCILLATOR_CALIBRATION__ */

  rccsrc = ConfigPtr->McuRunModeClockConfiguration | SYSCTL_RCC_BYPASS;
  rcc2src = ConfigPtr->McuRunModeClockConfiguration2 | SYSCTL_RCC2_BYPASS2;

  /* Configuring the microcontroller to run of a "raw" clock source */
  rccdst =	SYSCTL_RCC_SYSDIV_M	| /* Reset System Clock Divisor.      */
		SYSCTL_RCC_PWMDIV_M	| /* Reset PWM Unit Clock Divisor.    */
		SYSCTL_RCC_PWRDN 	| /* PLL Power-Down		      */
		SYSCTL_RCC_BYPASS	| /* PLL Bypass			      */
		SYSCTL_RCC_XTAL_16MHZ	| /* 16MHz			      */
		SYSCTL_RCC_OSCSRC_INT	| /* Precision Internal Oscillator    */
		SYSCTL_RCC_MOSCDIS;	  /* Disable Main Oscillator	      */

  rcc2dst =	SYSCTL_RCC2_SYSDIV2_M	| /* Reset System Clock Divisor.      */
		SYSCTL_RCC2_SYSDIV2LSB	| /* Additional LSB for SYSDIV2.      */
		SYSCTL_RCC2_USBPWRDN	| /* Power-Down USB PLL.	      */
		SYSCTL_RCC2_PWRDN2	| /* PLL Power-Down		      */
		SYSCTL_RCC2_BYPASS2	| /* PLL Bypass			      */
		SYSCTL_RCC2_OSCSRC2_IO;	  /* Precision Internal Oscillator    */

  /* 
   * IMPORTANT:	Write the RCC register prior to writing the RCC2 register.
   */
  SYSCTL_RCC_R = rccdst;		/* Write RCC			      */
  SYSCTL_RCC2_R = rcc2dst;		/* Write RCC2			      */

#ifdef	__AS_MCU_INTERNAL_OSCILLATOR_CALIBRATION__
  /* PIOSC Automatic Calibration using Hibernation Module if present */
  if ( SYSCTL_PPHIB_R & SYSCTL_PPHIB_P0) {

    /* Hibernation Module Clock Gating */
    SYSCTL_RCGCHIB_R |= SYSCTL_RCGCHIB_R0;

    /* Hibernation Module 32.768-kHz Oscillator Enable. */
    HIB_CTL_R |= HIB_CTL_CLK32EN;

    /* Wait Hibenation Module 32.768-kHz Oscillator to Enable. */
    while ( !((HIB_RIS_R & HIB_RIS_WC) || (HIB_MIS_R & HIB_MIS_WC)) );

    /* Repeat Calibration Process until Pass or Max Attempt*/
    for (
      attempt = 0; 
      (
	(attempt < MCU_PIOSC_CAL_MAX_ATTEMPTS) &&
	!(SYSCTL_PIOSCSTAT_R & SYSCTL_PIOSCSTAT_CRPASS)
      );
      attempt++
    ) {

      SYSCTL_PIOSCCAL_R |= SYSCTL_PIOSCCAL_CAL;

    }

    /* Calibration Process Failure Check. */
    if ( attempt == MCU_PIOSC_CAL_MAX_ATTEMPTS ) {

      rccsrc = rccorig;
      rcc2src = rcc2orig;
      ret = E_NOT_OK;

    }

    /* Hibernation Module 32.768-kHz Oscillator Disable. */
    HIB_CTL_R &= ~HIB_CTL_CLK32EN;

    /* Hibernation Module Clock Gating Removal */
    SYSCTL_RCGCHIB_R &= ~SYSCTL_RCGCHIB_R0;

  }
#endif	/* __AS_MCU_INTERNAL_OSCILLATOR_CALIBRATION__ */

  /*
    * IMPORTANT:	If a subsequent write to the RCC register is required,
    * 			include another register access after writing the RCC
    * 			register and before writing the RCC2 register.
    */
  SYSCTL_RCC_R = rccsrc;		/* Write RCC			      */
  rccsrc = SYSCTL_RCC2_R;		/* Read RCC2			      */
  SYSCTL_RCC2_R = rcc2src;		/* Write RCC2			      */

  return ret;

}

Mcu_PllStatusType Mcu_GetPllStatus(
  void
)
{

  register EE_FREG	flags;

#if ( MCU_NO_PLL == STD_OFF )
  register uint32 rccsrc;	/* Run-Mode Clock Configuration Source	      */
  register uint32 rcc2src;	/* Run-Mode Clock Configuration 2 Source      */
  register uint32 pllstat;	/* PLL Status.				      */
#endif

  register Mcu_PllStatusType	ret;

  flags = EE_hal_suspendIRQ();

  VALIDATE_IRQ_W_RV(
    Mcu_Global.Init,
    MCU_GETPLLSTATUS_SERVICE_ID,
    MCU_E_UNINIT,
    MCU_PLL_STATUS_UNDEFINED,
    flags
  );

#if ( MCU_NO_PLL == STD_ON )
  ret = MCU_PLL_STATUS_UNDEFINED;
#else

  rccsrc = SYSCTL_RCC_R;
  rcc2src = SYSCTL_RCC2_R;
  pllstat = SYSCTL_PLLSTAT_R;

  /* PLL undefined check. */
  if ( 
    ( ( rcc2src & SYSCTL_RCC2_USERCC2 ) && ( rcc2src & SYSCTL_RCC2_PWRDN2 ) ) ||
    ( !( rcc2src & SYSCTL_RCC2_USERCC2 ) && ( rccsrc & SYSCTL_RCC_PWRDN ) )
  )
    ret = MCU_PLL_STATUS_UNDEFINED;
  else if ( pllstat & SYSCTL_PLLSTAT_LOCK )
    ret = MCU_PLL_LOCKED;
  else
    ret = MCU_PLL_UNLOCKED;
#endif

  EE_hal_resumeIRQ(flags);

  return ret;

}

Mcu_ResetType Mcu_GetResetReason(
  void
) {

  register EE_FREG	flags;

  register uint32		resc;
  register Mcu_ResetType	ret;

  flags = EE_hal_suspendIRQ();

  VALIDATE_IRQ_W_RV(
    Mcu_Global.Init,
    MCU_GETRESETREASON_SERVICE_ID,
    MCU_E_UNINIT,
    MCU_RESET_UNDEFINED,
    flags
  );

  resc = SYSCTL_RESC_R;		/* Read  RESC */
  SYSCTL_RESC_R = 0x00000000U;	/* Clear RESC */

  if ( (resc & SYSCTL_RESC_POR) ) {

    ret = MCU_POWER_ON_RESET;

  }
  else if ( (resc & (SYSCTL_RESC_WDT1 | SYSCTL_RESC_WDT0)) ) {

    ret = MCU_WATCHDOG_RESET;

  }
  else if ( (resc & SYSCTL_RESC_SW) ) {

    ret = MCU_SW_RESET;

  }
  else {

    ret = MCU_RESET_UNDEFINED;

  }

  EE_hal_resumeIRQ(flags);

  return ret;

}

void Mcu_PerformReset(
  void
)
{


  register EE_FREG	flags;
  register uint32	apint;

  flags = EE_hal_suspendIRQ();

  VALIDATE_IRQ(
    Mcu_Global.Init,
    MCU_PERFORMRESET_SERVICE_ID,
    MCU_E_UNINIT,
    flags
  );

  /* 
   * Ensure all outstanding memory accesses included buffered write are
   * completed before reset
   */
  __dsb(0xF);

  apint = NVIC_APINT_R;
  NVIC_APINT_R = (
    NVIC_APINT_VECTKEY |		/* Vector key 			 */
    (apint & NVIC_APINT_PRIGROUP_M) |	/* Keep priority group unchanged */
    NVIC_APINT_SYSRESETREQ		/* System Reset Request		 */
  );

  __dsb(0xF);	/* Ensure completion of memory access */

  EE_hal_resumeIRQ(flags);

  while(TRUE);	/* Waiting for Reset to perform. */

}
