==> cryviem/choen/stm32OS/ee_files/contrib/as/arch/rx200_5f5210x/ccrx/drivers/Mcu.c <==
#define	MCU_AR_RELEASE_MAJOR_VERSION	4
#define	MCU_AR_RELEASE_MINOR_VERSION	0
#include "Mcu.h"
#include "ee.h"
#include "Det.h"
#include "Dem.h"
#define VALIDATE(_exp,_api,_err) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    return; \
  }
#define VALIDATE_IRQ(_exp,_api,_err,_flags) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    EE_hal_resumeIRQ(_flags); \
    return; \
  }
#define VALIDATE_W_RV(_exp,_api,_err,_rv) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    return (_rv); \
  }
#define VALIDATE_IRQ_W_RV(_exp,_api,_err,_rv,_flags) \
  if( !(_exp) ) { \
    Det_ReportError(MCU_MODULE_ID,0,_api,_err); \
    EE_hal_resumeIRQ(_flags); \
    return (_rv); \
  }
#define VALIDATE(_exp,_api,_err) \
  if( !(_exp) ) { \
    return; \
  }
#define VALIDATE_IRQ(_exp,_api,_err,_flags) \
  if( !(_exp) ) { \
    EE_hal_resumeIRQ(_flags); \
    return; \
  }
#define VALIDATE_W_RV(_exp,_api,_err,_rv) \
  if( !(_exp) ) { \
    return (_rv); \
  }
#define VALIDATE_IRQ_W_RV(_exp,_api,_err,_rv,_flags) \
  if( !(_exp) ) { \
    EE_hal_resumeIRQ(_flags); \
    return (_rv); \
  }
#include "Hardware.h"	/* Hardware Abstraction Header File. */

static Std_ReturnType Mcu_InitSystemClock( 
		const Mcu_ClockSettingConfigType *ConfigPtr)
{
	
	volatile uint16 i;
	
	/*
	 * If ROM (Flash Memory for Code Storage) is in P/E mode or a transition to 
	 * operating power is in progress, writing to clock registers is prohibited.
	 */
	if (FLASH.FENTRYR.BIT.FENTRY || SYSTEM.OPCCR.BIT.OPCMTSF) {
	
		return E_NOT_OK;
	}
	
	
	/* 
	 * Write protect off. 
	 * This enables the writing of clock/pll related registers. 
	 */
	SYSTEM.PRCR.WORD = 0xA503;
	
	
	/*
	 * If the Clock Setting ID specifies the LOCO clock do nothing, this is 
	 * the default setting. 
	 */
	if ( ConfigPtr->McuClockSettingId == MCU_CLK_MODE_LOCO_I1_B1 ) {
		
		return E_OK;
	}
	
	
	if ( ConfigPtr->McuRunModeClockConfiguration & MCU_SCKCR3_CKSEL_HOCO ) {
		
		/* High-Speed Clocl Oscillator wait control register    */
		/* 33792 cycles -> wait at least ~1 ms  (HOCO = 32MHz ) */
		SYSTEM.HOCOWTCR2.BYTE = 0x0F;
		/* Select the HOCO working freq.						*/
		SYSTEM.HOCOCR2.BYTE |=  (ConfigPtr->McuRunModeClockConfiguration & 
								0x18000000) >> 27;
		/* HOCO ON												*/
		SYSTEM.HOCOCR.BYTE = 0x00;
		
	} else if ( ConfigPtr->McuRunModeClockConfiguration & 
			   MCU_SCKCR3_CKSEL_MAIN ) {
		/* Main clock oscillator wait control register			*/
		/* 65536 cycles -> wait at least 2 ms  (XTAL = 20MHz )  */
		SYSTEM.MOSCWTCR.BYTE = 0x0C;
		/* XTAL ON */
		SYSTEM.MOSCCR.BYTE = 0x00;
		
	} else {
		
		/*If PLL is not stopped, stop it.*/
		if (SYSTEM.PLLCR2.BYTE != 0x01) {
			/* Unselect PLL and select LOCO						*/
			SYSTEM.SCKCR3.BIT.CKSEL = 0;
			/* Stop PLL											*/
			SYSTEM.PLLCR2.BYTE = 0x01;
			/* Delay a little to let PLL to stop.				*/
			for (i = 0; i < 100; i++) {	
			}
			
		}
		/* Main clock oscillator wait control register			*/
		/* 65536 cycles -> wait at least 2 ms  (XTAL = 20MHz )  */
		SYSTEM.MOSCWTCR.BYTE = 0x0C;
		/* PLL wait control register							*/
		/* 262144 cycles										*/
		SYSTEM.PLLWTCR.BYTE = 0x0B;
		
		/* Set DIV and MUL factors of PLL						*/
		SYSTEM.PLLCR.WORD = (ConfigPtr->McuRunModeClockConfiguration >> 11) & 
							0x3FFF;
		/* XTAL ON												*/
		SYSTEM.MOSCCR.BYTE = 0x00;				
		/* PLL ON												*/									
		SYSTEM.PLLCR2.BYTE = 0x00;
		
	}
	
	/* Delay a little to let the source clock to settle.		*/
	for (i = 0; i < 10000; i++) {	
	}
	
	/*
	 * Set Main Clock Oscillator Forced Oscillation Control Register (MOFCR)
	 */
	SYSTEM.MOFCR.BYTE |= ConfigPtr->McuRunModeClockConfiguration;
		
	/*
	 * Set system (ICLK) and peripheral module B (PCLKB) clocks
	 */
	SYSTEM.SCKCR.LONG  |= ConfigPtr->McuRunModeClockConfiguration2;		
 	
	/* Select the source for system clock (bits 8:10) */
	SYSTEM.SCKCR3.WORD |=  (ConfigPtr->McuRunModeClockConfiguration & 0x700);
	
	/* Write protect on */
	SYSTEM.PRCR.WORD = 0xA500;
	
	return E_OK;

}

Mcu_PllStatusType Mcu_GetPllStatus(void)
{

	register EE_FREG	flags;
	register Mcu_PllStatusType	ret;

	flags = EE_hal_suspendIRQ();

	VALIDATE_IRQ_W_RV(
					  Mcu_Global.Init,
					  MCU_GETPLLSTATUS_SERVICE_ID,
					  MCU_E_UNINIT,
					  MCU_PLL_STATUS_UNDEFINED,
					  flags
					  );

#if ( MCU_NO_PLL == STD_ON )
	ret = MCU_PLL_STATUS_UNDEFINED;
#else
	if (SYSTEM.PLLCR2.BYTE)
		ret = MCU_PLL_UNLOCKED;
	else
		ret = MCU_PLL_LOCKED;
#endif

	EE_hal_resumeIRQ(flags);

	return ret;

}

Mcu_ResetType Mcu_GetResetReason(void) 
{

	register EE_FREG	flags;

	register uint8		resc;
	register Mcu_ResetType	ret;

	flags = EE_hal_suspendIRQ();

	VALIDATE_IRQ_W_RV(
					  Mcu_Global.Init,
					  MCU_GETRESETREASON_SERVICE_ID,
					  MCU_E_UNINIT,
					  MCU_RESET_UNDEFINED,
					  flags
					  );

	/* Read reset reason							*/
	resc = (SYSTEM.RSTSR0.BYTE & 0x8F) | (SYSTEM.RSTSR2.BYTE << 4);
	/* Clear reset registers						*/
	SYSTEM.RSTSR0.BYTE = SYSTEM.RSTSR2.BYTE = 0x00;
	
	if ( resc & SYS_RESC_POR ) {
		ret = MCU_POWER_ON_RESET;
	} else if ( resc & (SYS_RESC_IWDT | SYS_RESC_WDT) ) {
		ret = MCU_WATCHDOG_RESET;
	} else if (resc & SYS_RESC_SW) {
		ret = MCU_SW_RESET;
	} else {
		ret = MCU_RESET_UNDEFINED;
	}

	EE_hal_resumeIRQ(flags);

	return ret;

}

void Mcu_PerformReset(void)
{

	register EE_FREG	flags;

	flags = EE_hal_suspendIRQ();

	VALIDATE_IRQ(
				 Mcu_Global.Init,
				 MCU_PERFORMRESET_SERVICE_ID,
				 MCU_E_UNINIT,
				 flags
				 );
	
	/* Allow the writing to SWRR register 				*/
	SYSTEM.PRCR.WORD = 0xA502;
	
	/* Perform software reset							*/
	SYSTEM.SWRR.WORD = 0xA501;
	
	/* Protect the writing to SWRR register 			*/
	SYSTEM.PRCR.WORD = 0xA500;
	
	EE_hal_resumeIRQ(flags);
	
	while(TRUE);	/* Waiting for Reset to perform.	*/	


}
